[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/img/sprites/unnamed.png" type="Texture" id=2]
[ext_resource path="res://assets/img/sprites/Player/player_tilesheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 110, 80, 110 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 110, 80, 110 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 29.3959
height = 52.884

[sub_resource type="CapsuleShape2D" id=6]
radius = 25.5
height = 57.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16.6562, 10 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
scale = Vector2( 2, 2 )
z_index = -1
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.25113, -1.47237 )
scale = Vector2( -0.64, 0.64 )
frames = SubResource( 4 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="AttackDelayTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CooldownTimer" type="Timer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Pivot" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Pivot"]
position = Vector2( 12.3744, 0 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Area2D"]
position = Vector2( 27.9307, 0 )
scale = Vector2( 0.600001, 1 )
shape = SubResource( 7 )

[connection signal="timeout" from="AttackDelayTimer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="area_entered" from="Pivot/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Pivot/Area2D" to="." method="_on_Area2D_area_exited"]
